--- a/Components/nav.html
+++ b/Components/nav.html
@@ -15,10 +15,11 @@
             <div class="line3"></div>
         </div>
         <ul class="nav-links">
-            <li><a href="../index.html">Seeker</a></li>
-            <li><a href="../about_us.html">Donor</a></li>
+            <li><a href="../index.html">Oxygen leads</a></li>
+            <li><a href="../about_us.html">Plasma Donor</a></li>
+            <li><a href="../start-up-cards-all.html">Hospital beds</a></li>
+            <li><a href="../start-up-cards-all.html">Medical leads</a></li>
             <li><a href="../start-up-cards-all.html">Volunteer</a></li>
-            
         </ul>
     </nav>
     <script src="/JS/nav.js"></script>
