--- a/Components/nav.html
+++ b/Components/nav.html
@@ -18,7 +18,7 @@
             <li><a href="../index.html">Oxygen leads</a></li>
             <li><a href="../about_us.html">Plasma Donor</a></li>
             <li><a href="../start-up-cards-all.html">Hospital beds</a></li>
-            <li><a href="../start-up-cards-all.html">Medical leads</a></li>
+            <li><a href="../remdesivir.html">Medical leads</a></li>
             <li><a href="../start-up-cards-all.html">Volunteer</a></li>
         </ul>
     </nav>
