--- a/CSS/remdesivir.css
+++ b/CSS/remdesivir.css
@@ -150,12 +150,10 @@ th{
 
 		td:before {
 			position: absolute;
-			top: 0;
+			top: 5px;
 			left: 6px;
 			width: 45%;
 			padding-right: 10px;
-            padding-top: 5px;
-            padding-bottom: 5px;
 			white-space: nowrap;
 		}
 
