--- a/Components/nav.html
+++ b/Components/nav.html
@@ -15,8 +15,9 @@
             <div class="line3"></div>
         </div>
         <ul class="nav-links">
-            <li><a href="../index.html">Oxygen leads</a></li>
-            <li><a href="../about_us.html">Plasma Donor</a></li>
+            <li><a href="../index.html">Oxygen Refill</a></li>
+            <li><a href="../index.html">Oxygen Concentrator</a></li>
+            <li><a href="../about_us.html">Plasma</a></li>
             <li><a href="../start-up-cards-all.html">Hospital beds</a></li>
             <li><a href="../start-up-cards-all.html">Medical leads</a></li>
             <li><a href="../start-up-cards-all.html">Volunteer</a></li>
