--- a/CSS/remdesivir.css
+++ b/CSS/remdesivir.css
@@ -76,6 +76,7 @@ th{
 .container-fluid{
     margin-top: 30px;
 }
+
 .filter-container input{
     border-radius: 0.5em;
     padding: 5px;
@@ -121,6 +122,7 @@ th{
 
 /* media query for responsive table */
 	@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px)  {
+        
 
 		table, thead, tbody, th, td, tr {
 			display: block;
@@ -137,15 +139,18 @@ th{
         }
       
         tr:nth-child(odd) {
-            background: #ccc;
+            background: rgb(202, 197, 197) !important;
         }
     
 		td {
-            box-sizing: border-box;
+            box-sizing: content-box;
 			border: none;
 			border-bottom: 1px solid #eee !important;
 			position: relative;
-			padding-left: 50% !important;
+			padding-left: 45% !important;
+            width: 50%;
+            word-wrap: break-word;
+            min-height: 20px;
 		}
 
 		td:before {
@@ -157,6 +162,8 @@ th{
 			white-space: nowrap;
 		}
 
+        
+        
 		
 		td:nth-of-type(1):before { content: "Pincode: "; }
 		td:nth-of-type(2):before { content: "State:"; }
