--- a/Components/nav.html
+++ b/Components/nav.html
@@ -7,7 +7,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="../Images/navbar logo.png" alt="">
+            <img src="../img/logo.png" alt="">
         </div>
         <div class="hamburger">
             <div class="line1"></div>
@@ -15,7 +15,7 @@
             <div class="line3"></div>
         </div>
         <ul class="nav-links">
-            <li><a href="../index.html">Oxygen Refill</a></li>
+            <li><a href="../oxygenrefill.html">Oxygen Refill</a></li>
             <li><a href="../index.html">Oxygen Concentrator</a></li>
             <li><a href="../about_us.html">Plasma</a></li>
             <li><a href="../start-up-cards-all.html">Hospital beds</a></li>
