--- a/Components/nav.html
+++ b/Components/nav.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="../oxygenrefill.html">Oxygen Refill</a></li>
-            <li><a href="../index.html">Oxygen Concentrator</a></li>
+            <li><a href="../oxygenconcentrator.html">Oxygen Concentrator</a></li>
             <li><a href="../about_us.html">Plasma</a></li>
             <li><a href="../start-up-cards-all.html">Hospital beds</a></li>
             <li><a href="../remdesivir.html">Medical leads</a></li>
