--- a/Components/nav.html
+++ b/Components/nav.html
@@ -17,7 +17,7 @@
         <ul class="nav-links">
             <li><a href="../oxygenrefill.html">Oxygen Refill</a></li>
             <li><a href="../oxygenconcentrator.html">Oxygen Concentrator</a></li>
-            <li><a href="../about_us.html">Plasma</a></li>
+            <li><a href="../Donor.html">Plasma</a></li>
             <li><a href="../start-up-cards-all.html">Hospital beds</a></li>
             <li><a href="../remdesivir.html">Medical leads</a></li>
             <li><a href="../start-up-cards-all.html">Volunteer</a></li>
