Path of Nav Updated

--- a/Components/nav.html
+++ b/Components/nav.html
@@ -18,9 +18,9 @@
             <li><a href="../oxygenrefill.html">Oxygen Refill</a></li>
             <li><a href="../oxygenconcentrator.html">Oxygen Concentrator</a></li>
             <li><a href="../Donor.html">Plasma</a></li>
-            <li><a href="../start-up-cards-all.html">Hospital beds</a></li>
+            <li><a href="../HospitalBeds.html">Hospital beds</a></li>
             <li><a href="../remdesivir.html">Medical leads</a></li>
-            <li><a href="../start-up-cards-all.html">Volunteer</a></li>
+            <li><a href="../start-up-card">Volunteer</a></li>
         </ul>
     </nav>
     <script src="/JS/nav.js"></script>
