--- a/Components/nav.html
+++ b/Components/nav.html
@@ -7,7 +7,8 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="../img/logo.png" alt="">
+            <a href="../index.html">
+            <img src="../img/logo.png" alt=""></a>
         </div>
         <div class="hamburger">
             <div class="line1"></div>
