--- a/CSS/form.css
+++ b/CSS/form.css
@@ -2,6 +2,7 @@
     padding: 10px;
     background-color: #f4f9ff;
     margin-top: 50px;
+    margin-bottom: 50px;
     text-align: center;
 }
 .form-table{
