--- a/Components/nav.html
+++ b/Components/nav.html
@@ -21,7 +21,7 @@
             <li><a href="../Donor.html">Plasma</a></li>
             <li><a href="../HospitalBeds.html">Hospital beds</a></li>
             <li><a href="../remdesivir.html">Medical leads</a></li>
-            <li><a href="../start-up-card">Volunteer</a></li>
+            <li><a href="../volunteerForm.html">Volunteer</a></li>
         </ul>
     </nav>
     <script src="/JS/nav.js"></script>
